--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -1,8 +1,9 @@
   /*-- Artist Profile Banner--*/
 
-/*  .artist-wrapper {
-    margin-top: 60px;
-  }*/
+  .artist-wrapper {
+    margin-top: -20px;
+    text-align: left;
+  }
   .artist-banner  {
     background-image: url('https://i.ytimg.com/vi/AqpzxxxrkAY/maxresdefault.jpg');
     background-repeat: no-repeat;
@@ -85,16 +86,25 @@
 }
 /*tablet*/
 @media (min-width: 767px) and (max-width: 991px) {
+  .artist-stats-wrapper h1, .artist-profile-img {
+    margin-top: 25px;
+  }
+
 
 }
 @media (min-width: 992px) and (max-width: 1199px) {
-
+  .artist-stats-wrapper h1, .artist-profile-img {
+    margin-top: 25px;
+  }
 }
 /* large desktop*/
 @media (min-width: 1200px) {
   
   .artist-stats-wrapper {
-    margin: 30px 0 0;
+    margin-top: -20px;
+  }
+  .artist-stats-wrapper h1, .artist-profile-img {
+    margin-top: 25px;
   }
 } 
 /*-- Artist Stats Bar --*/
@@ -111,7 +121,7 @@
     .artist-stats-bar span {
       font-size: 35px;
       margin-top: 20px;
-      font-family: "entypo";
+      font-family: "social shapes";
     }
 .artist-stats-bar-background {
   background-color: #fff;
@@ -124,16 +134,17 @@
 /*mobile    */
 @media (max-width: 768px) {
   .artist-stats-list {
-    margin-top: 10px;
+    margin-top: 110px;
     padding: 15px 0 0;
   }
   .artist-stats-bar span {
     visibility: hidden;
-    /*margin-top: 30px;*/
   }
   .artist-stats-bar-background {
+    position: absolute;
     visibility: hidden;
   }
+
 }
 /*tablet*/
 @media (min-width: 769px) and (max-width: 990px) {
@@ -156,10 +167,15 @@
 /* large desktop*/
 @media (min-width: 1200px) {
   .artist-stats-list {
-    margin-top: -65px;
+    margin-top: 215px;
+  }
+  .artist-stats-bar-background {
+    margin-top: 55px;
   }
 }
-
+.artist-social-icons {
+  margin: 10px 3px 0 3px;
+}
 
 
 
