--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,8 @@ ol, ul {
 }
 
 .navbar {
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
+
 	-webkit-border-radius: 0;
 	-moz-border-radius: 0;
 	border-radius: 0;
