--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -64,6 +64,13 @@
         .follow-btn h3 {
           margin: 0 0 0;
         }
+.header-banner-collapse {
+  height: 0;
+
+  transition: 2s ease-in;
+  -moz-transition: 2s ease-in;
+  -webkit-transition: 2s ease-in;
+}        
 
 /*mobile    */
 @media (max-width: 768px) {
@@ -170,18 +177,179 @@
     margin-top: 215px;
   }
   .artist-stats-bar-background {
-    margin-top: 55px;
+    margin-top: 58px;
   }
 }
 .artist-social-icons {
   margin: 10px 3px 0 3px;
 }
 
+/*-- Artist Timeline --*/
 
+.artist-timeline {
+    list-style: none;
+    padding: 20px 0 20px;
+    position: relative;
 
+}
 
+    .artist-timeline:before {
+        top: 0;
+        bottom: 0;
+        position: absolute;
+        content: " ";
+        width: 3px;
+        background-color: #eeeeee;
+        left: 55px;
+    }
 
+    .artist-timeline > li {
+        margin-bottom: 20px;
+        position: relative;
+    }
+        .artist-timeline > li:before,
+        .artist-timeline > li:after {
+            content: " ";
+            display: table;
+        }
+        .artist-timeline > li:after {
+            clear: both;
+        }
 
+        .artist-timeline > li > .artist-timeline-panel {
+            margin-left: 110px;
+            padding: 20px;
+            position: relative;
+        }
+
+        .artist-timeline > li > .artist-timeline-badge {
+            color: #fff;
+            width: 50px;
+            height: 50px;
+            line-height: 50px;
+            font-size: 1.4em;
+            text-align: center;
+            position: absolute;
+            margin-left: 4%;
+            background-color: #50E3C2;
+            z-index: 100;
+            border-top-right-radius: 50%;
+            border-top-left-radius: 50%;
+            border-bottom-right-radius: 50%;
+            border-bottom-left-radius: 50%;
+        }
+
+.artist-timeline-title {
+    margin-top: 0;
+    color: inherit;
+}
+.artist-timeline-body {
+  text-align: left;
+}
+.artist-timeline-body > p,
+.artist-timeline-body > ul {
+    margin-bottom: 0;
+}
+iframe {
+    text-align: left;
+    padding: none;
+    border: none;
+}
+.artist-upload-timestamp, .artist-content-media-description, .artist-content-video-header {
+  text-align: left;
+}
+  .artist-upload-timestamp {
+    margin: 0 0 20px -40px;
+  }
+  .artist-content-video-header {
+    margin: 20px 0 5px;
+  }
+  .artist-content-media-description {
+    margin: 0 0 0 -15px;
+  }
+    .artist-content-media-description a {
+      color: #4A90E2;
+    }
+.artist-timeline-img {
+  width: 175px;
+  height: 175px;
+}
+ .artist-timeline-video {
+  width: 560px; 
+  height:315px;
+ }
+ /*mobile*/
+@media (max-width: 768px) {
+  .artist-timeline-wrapper {
+    margin-top: 200px;
+  }
+  .artist-timeline-body, .artist-timeline-title {
+    display: none;
+  }
+  .artist-timeline-panel, .artist-timeline-video {
+    height: 50px;
+  }
+  ul.artist-timeline {
+    padding: none;
+  }
+  .artist-upload-timestamp {
+    margin: 0;
+  }
+  .artist-timeline > li > .artist-timeline-panel {
+    margin-left: 60px;
+  }
+  .artist-timeline::before {
+    left: 40px;
+  }
+
+}
+/*tablet*/
+@media (min-width: 769px) and (max-width: 990px) {
+  .artist-timeline-video {
+    width: 350px; 
+    height: 100%;
+  }
+  .artist-timeline::before {
+    left: 35px;
+  }
+}
+/*desktop*/
+@media (min-width: 991px) and (max-width: 1199px) {
+  .artist-timeline-video {
+    width: 450px; 
+    height: 100%;
+  }  
+}
+/*large desktop*/
+@media (min-width: 1200px) {
+}
+
+/*-- Artist Sidebar Right --*/
+
+.artist-sidebar-right-wrapper {
+  font-family: "roboto-light";
+  height: 100vh;
+  overflow: hidden;
+  background-color: #f4f4f4;
+  padding-top: 30px;
+  margin-top: -1px;
+  text-align: left;
+}
+
+.similar-img img {
+  width: 80px;
+  border-radius: 50%;
+  padding: 15px 0;
+}
+/*mobile*/
+@media (max-width: 768px) {
+}
+/*tablet*/
+@media (min-width: 769px) and (max-width: 990px) {
+  .similar-img img {
+    width: 60px;
+  }
+}
 
 
 
