--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -68,6 +68,9 @@
   height: 130px;
   position: absolute;
   z-index: 1;
+  
+  filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));
+  -webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));
 }
 .artist-featured-header-info {
   position: relative;
@@ -161,9 +164,112 @@
   }
 }
 
+/*-- Artist Main Content --*/
+.artist-main-content-wrapper {
+  color: white;
+  font-family: "roboto-medium";
+  text-align: left;
+}
+  .artist-main-content-wrapper h1 {
+    font-style: italic;
+    margin-top: 30px;
+    font-size: 60px;
+    
+    filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));
+    -webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));
+  }
+    .artist-main-content-wrapper h4 {
+      font-family: "roboto-light";
+      margin-top: 20px;
+      
+      filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));
+      -webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));
+    }
+.artist-suggested-wrapper {
+  margin-top: 485px;
+  position: absolute;
+  z-index: 0;
+}
 
+.artist-suggested-box-wrapper {
+  background: grey;
+  height: 225px;
+}
 
+.top-of-rock {
+  background-image: url('http://www.echosmith.com/sites/g/files/g2000002326/f/201410/Echosmith-SiteBackground-1920x1280_05_rev.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center center;
+}
+.beatmakers {
+  background-image: url('http://www.echosmith.com/sites/g/files/g2000002326/f/201410/Echosmith-SiteBackground-1920x1280_05_rev.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center center;
+}
+.open-roads {
+  background-image: url('http://www.echosmith.com/sites/g/files/g2000002326/f/201410/Echosmith-SiteBackground-1920x1280_05_rev.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center bottom;
+}
+.creator-playlists {
+  background-image: url('http://www.echosmith.com/sites/g/files/g2000002326/f/201410/Echosmith-SiteBackground-1920x1280_05_rev.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center center;
+}
+  .rock {
+    background-color: rgb(159, 0, 255);
+    opacity: .2;
+    height: 225px;
+    width: 100%;
+    position: absolute;
+  }
+  .beat {
+    background-color: rgb(255, 238, 114);
+    opacity: .2;
+    height: 225px;
+    width: 100%;
+    position: absolute;
+  }
+  .road {
+    background-color: rgb(80, 227, 194);
+    opacity: .2;
+    height: 225px;
+    width: 100%;
+    position: absolute;
+  }
+  .creator {
+    background-color: rgb(68, 55, 252);
+    opacity: .2;
+    height: 225px;
+    width: 100%;
+    position: absolute;
+  }
 
+.row.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
+.row.no-gutters > [class^="col-"],
+.row.no-gutters > [class*=" col-"] {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+@media (max-width: 768px) {
+  .artist-main-content-wrapper {
+    text-align: center;
+  }
+    .artist-main-content-wrapper h1 {
+      font-size: 40px;
+    }
+  .artist-suggested-wrapper {
+    margin-top: 465px;
+  }  
+}
 
 
 
