pulling to sync

--- a/assets/css/artist-search.css
+++ b/assets/css/artist-search.css
@@ -102,6 +102,7 @@
   background-color: #F9F9F9;
   text-align: left;
   color: #9B9B9B;
+  padding-right: 20px; 
 }
   .artist-internal-download-count {
     font-family: 'roboto-light';
@@ -189,11 +190,13 @@
 .artist-upload-wrapper {
   border: 1px solid lightgrey;
   padding: 20px;
-  filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));
-  -webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));s
+  background-color: white;
+  filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.3));
+  -webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.3));
 }
 .artist-upload-drop {
   padding: 30px;
   margin-top: 20px;
   border: 1px dashed lightgrey;
+  text-align: center;
 }
