--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -145,19 +145,29 @@ a.brand {
 
 .filter-nav {
     width: 100%;
-    background: #eee;
-    border-bottom: 1px solid #ddd;
+    background-color: #50E3C2;
     box-shadow: 0 2px 5px -3px rgba(0, 0, 0, 0.5);
-    margin-bottom: 10px;
     overflow: hidden;
     white-space: nowrap;    
     position: relative;
     z-index: 3000;
 }
-.filter-nav ul {
-    margin: auto;
-    padding: 0;
+.filter-nav-list {
+    margin-left: 20px;
+    width: 100%;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
 }
+.filter-nav-list::-webkit-scrollbar {
+    display: none;
+}
+.filter-nav-list li {
+    display: inline;
+    margin-right: 70px;
+}
+
 .filter-link {
     width: 100px;
     padding: 15px;
