added upload view

--- a/assets/css/playlist.css
+++ b/assets/css/playlist.css
@@ -3,7 +3,7 @@
 .playlist-header-banner {
   height: 370px;
   background-image: url('https://pixabay.com/static/uploads/photo/2015/05/15/14/31/amplifier-768536_960_720.jpg');
-  position: absolute; 
+  position: relative; 
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 100%;
@@ -54,14 +54,7 @@
       filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));
       -webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));
     }
-.playlist-header-overlay {
-  height: 370px;
-  width: 100%;
-  background: rgb(80, 227, 194);
-  opacity: .15;
-  position: absolute;
-  z-index: 2;
-}
+
 /*mobile*/
 @media (max-width: 768px) {
   .playlist-header-wrapper {
@@ -81,8 +74,8 @@
 /*-- Playlist Table --*/
 
 .playlist-table-wrapper {
-  margin-top: 460px;
-  position: absolute;
+  margin-top: 30px;
+  position: relative;
   font-family: "roboto-light";
   padding: 0 100px;
 }
@@ -160,8 +153,8 @@
 /*--Playlist Mobile View --*/
 
 .playlist-mobile-view-wrapper {
-  margin-top: 450px;
-  position: absolute;
+  margin-top: 30px;
+  position: relative;
   display: none;
 }
 .playlist-mobile-view-wrapper li {
