--- a/assets/css/artist-search.css
+++ b/assets/css/artist-search.css
@@ -2,11 +2,11 @@
   background-color: #F9F9F9;
   height: 100%;
   width: 100%;
-  position: absolute;
+  position: relative;
   z-index: -99;
 }
 .artist-search-side-bar-wrapper {
-  position: absolute;
+  position: relative;
   margin-top: 50px;
 }
 .artist-search-tags {
@@ -25,12 +25,11 @@
   font-family: 'roboto-light';
   padding: 50px 50px;
   height: 100%;
-  margin-top: 60px;
   background-color: white;
 }
 .artist-search-table-wrapper td {
   padding: 15px 0;
-  border-bottom: 1px solid #FAFAFA;
+  border-bottom: 1px solid lightgrey;
   text-align: left;
 }
 .artist-search-album-detail {
@@ -51,7 +50,7 @@
   position: absolute;
   display: none;
 }
-
+/*mobile*/
 @media (max-width: 767px) {
   .artist-search-table-wrapper {
     display: none;
@@ -92,148 +91,19 @@
     margin-left: -15px;
   }
 }
-@media (min-width: 768px) and (max-width: 992px) {
+
+/*tablet*/
+@media (min-width: 768px) and (max-width: 991px) {
   .artist-search-tags h3 {
     font-size: 15px;
   }
-}
-/*-- Artist Internal -- */
-.artist-internal-wrapper {
-  background-color: white;
-  text-align: left;
-  color: #9B9B9B;
-  padding-right: 20px;
-  position: absolute; 
-}
-  .artist-internal-sidebar-wrapper {
-    background-color: #F9F9F9;
-    max-width: 300px;
-    margin-right: 30px;
-  }
-  .artist-internal-download-count {
-    font-family: 'roboto-light';
-    border-bottom: 1px solid lightgrey;
-    padding: 30px 0 30px 0;
-  }
-  .artist-internal-download-count h3 {
-    font-family: 'roboto-medium';
-    margin-bottom: 15px;
-  }
-  .artist-internal-download-count span {
-    color: #9B9B9B;
-  }
-  .artist-internal-download-count h2 {
-    color: #50E3C2;
-    margin-top: -10px;
-  }
-  .artist-internal-play-count {
-    padding: 20px 20px 30px;
-    font-family: 'roboto-light';
-    border-bottom: 1px solid lightgrey;
-    padding-bottom: 30px;
-    padding-right: 0;
-  }
-  .artist-internal-play-count h3 {
-    font-family: 'roboto-medium';
-    margin-bottom: 15px;
-  }
-  .artist-internal-play-count h2 {
-    color: #50E3C2;
-    margin-top: -10px;
-  }
-  .artist-internal-play-count span {
-    color: #9B9B9B;
-  }
-  .artist-internal-top-interest-img {
-    width: 60px;
-    border-radius: 50%;
-  }
-  .artist-internal-top-interest {
-    font-family: 'roboto-light';
-    padding: 20px 0 20px 20px;
-    border-bottom: 1px solid lightgrey;
-  }
-  .artist-internal-top-interest h3 {
-    font-family: 'roboto-medium';
-    margin-bottom: 25px;
-  }
-  .artist-internal-top-interest span {
-    color: #9B9B9B;
-  }
-    .artist-internal-top-interest li {
-      margin: 10px 0 10px -20px;
-      padding: 0;
-    }
-      .artist-internal-top-interest li h4 {
-        margin-top: 15px;
-      }
-  .artist-internal-top-regions {
-    padding: 20px 0 20px 20px;
-  } 
-    .artist-internal-top-regions span {
-      color: #9B9B9B;
-    } 
-    .artist-internal-top-regions h3 {
-      margin-bottom: 20px;
-    }  
-    .artist-internal-top-regions h4 {
-      font-family: 'roboto-light';
-      margin-bottom: 10px;
-    }
-    .artist-internal-top-regions li {
-      margin: 10px 0 10px -25px;
-    } 
-.pull-right {
-  float: right !important;
-}  
-@media (max-width: 768px) {
-  .artist-internal-wrapper p {
-    text-align: left;
+  .artist-search-album-detail {
+    margin-top: 5px;
   }
 }
-/*-- Artist Upload --*/
-.artist-internal-greeting {
-  margin: 25px 0;
-}
-.artist-upload-wrapper {
-  border: 1px solid lightgrey;
-  padding: 20px;
-  background-color: white;
-  filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.3));
-  -webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.3));
-  font-family: 'roboto-light';
-}
-  .artist-upload-wrapper h3 {
-    color: #50E3C2;
+@media (min-width: 992px ) and (max-width: 1199px) {
+  .artist-search-album-detail {
+    margin-top: 5px;
   }
-  .artist-upload-wrapper a {
-    color: #50E3C2;
-  }
-.artist-upload-drop {
-  padding: 30px;
-  margin-top: 20px;
-  border: 1px dashed lightgrey;
-  text-align: center;
 }
-.artist-upload-up {
-  color: #9B9B9B;
-}
-.artist-upload p {
-  margin: 20px 0 2px 0;
-}
-.artist-add-artist-link {
-  margin-top: 8px;
-}
-.artist-upload-input {
-  height: 50px;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,.3), 0 -1px 1px #FFF, 0 1px 0 #FFF;
-}
-.artist-upload-btn {
-  height: 50px;
-  margin: 30px 0;
-  border-radius: 0;
-  color: white;
-  background-color: #50E3C2;
-  filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.3));
-  -webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.3));
-}
+
