--- a/assets/css/artist.css
+++ b/assets/css/artist.css
@@ -58,7 +58,7 @@
   overflow: hidden;
   width: 100%;
   height: 425px;
-  position: absolute;
+  position: relative;
 }
 .artist-featured-header-bar {
   background:rgba(255,255,255, 0.6);
@@ -185,8 +185,7 @@
       -webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));
     }
 .artist-suggested-wrapper {
-  margin-top: 485px;
-  position: absolute;
+  position: relative;
   z-index: 0;
 }
 
@@ -266,7 +265,7 @@
       font-size: 40px;
     }
   .artist-suggested-wrapper {
-    margin-top: 465px;
+    margin-top: 120px;
   }  
 }
 
