--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -164,20 +164,16 @@ a.brand {
     display: none;
 }
 .filter-nav-list li {
-    display: inline;
-    margin-right: 70px;
-}
-
-.filter-link {
-    width: 100px;
-    padding: 15px;
-    border-right: 1px solid #ddd;
     display: inline-block;
-    text-align: center;
-    cursor: pointer;
+    margin-right: 40px;
+    padding: 5px;
 }
-.filter-link:last-child {
-    border: none;
+.filter-nav-list a {
+    color: #fff;
+    font-size: 36px;
+}
+.filter-nav-list a:hover {
+    color: #eee;
 }
 
 a.control_prev, a.control_next {
@@ -249,6 +245,7 @@ a.control_next {
     text-overflow: ellipsis;
     display: inline;
 }
+
 .filter-menu .filter-item.active {
     border-bottom: 2px solid #555;
     font-weight: 600;
