--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -15,56 +15,71 @@
     min-width: 50%;
     min-height: 50%;
 }
+
+.form, .login-form {
+    margin: 100px auto;
+    position: relative;
+    display: inline-block;
+}
 .login-form {
-    width: 420px;
-    margin: 40px auto;
+    width: 400px;
+}
+.form-tabs {
+    margin: 10px 0;
+    position: absolute;
+    top: -65px;
+    width: 100%;
+}
+.form-tabs a {
+    padding: 10px 5px;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: bold;
+    width: 50%;
+    float: left;
+}
+.form-tabs .active a {
     background: #fff;
-    padding: 30px 40px 20px;
-    border-radius: 10px;
+    opacity: .9;
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
+}
+.form-bg {
+    background: #fff;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    opacity: .9;
     border: 1px solid #eee;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
-    opacity: .9;
+}
+.form-content {
+    padding: 30px 40px;
+    position: relative;
 }
 
-.error {
-	color: #e55;
-}
-.login-btn .icon {
-    height: 48px;
-    padding: 14px 17px;
-    color: #3C5A98;
-    font-size: 24px;
-    line-height: 24px;
+.abcRioButtonLightBlue {
+    color: #fff !important;
+    background-color: #999 !important;
+    height: 45px !important;
+    width: 100% !important;
+    margin: 10px 0;
 }
 .abcRioButtonIcon {
-    border-right: 1px solid #ddd;
-    background: #f9f9f9;
+    display: none;
+}
+.abcRioButtonContentWrapper {
+    height: 100%;
+    width: 100%;
+    padding: 6px;
+}
+.abcRioButtonContents {
+    line-height: 30px !important;
+    font-size: 22px !important;
+    font-weight: normal !important;
 }
 .abcRioButtonLightBlue {
-    width: 65% !important;
-	min-width: 250px;
-	height: 50px;
-    margin: 10px auto;
-	cursor: pointer;
-	border: 1px solid #ddd;
+    width: 100% !important;
+    min-width: 250px;
+    cursor: pointer;
+    border: 0;
 }
-.input-group .form-control {
-	margin-bottom: 10px;
-}
-.input-group-addon {
-    background-color: transparent;
-    border: none;	
-	font-size: 18px;
-	line-height: 24px;
-    padding-top: 0;
-    padding-right: 10px;
-	padding-bottom: 0;
-	padding-left: 0;
-}
-.input-group-addon .fa {
-	width: 22px;
-}
-.input-group-addon .fa-envelope {
-	font-size: 20px;
-}
-
