--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,22 +14,27 @@ h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 }
 a {
-	color: #202020;
+	color: #50E3C2;
 }
 a:hover {
 	text-decoration: none;
 	cursor: pointer;
 	color: #50E3C2;
 }
+a.secondary {
+    color: #498FE3;
+}
 ol, ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
+
 .spacer {
 	display: block;
 	padding: 10px;
 }
+
 .display-true {
 	display: block;
 }
@@ -37,95 +42,63 @@ ol, ul {
     display: none;
 }
 
-/* BEGIN Header Styles */
-.navbar.member {
-	background-color: #fff;
-}
-.navbar.member .navbar-right a {
-	color: #999;
-    padding: 14px 14px;
-    font-size: 18px;
+
+/* BEGIN Form Styles */
+.error {
+    color: #e55;
 }
 
-.navbar.landing {
-	background-color: rgba(0, 0, 0, 0.5);
+.form-input {
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0px -1px 1px 0px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    margin-bottom: 10px;
 }
 
-.navbar {
-  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
-
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0;
+.btn {
+    border-radius: 0;   
+    -webkit-box-shadow: 1px 1px 2px 0px rgba(0,0,0,.2);
+    box-shadow: 1px 1px 2px 0px rgba(0,0,0,.2);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s; 
+    font-size: 24px;
+    line-height: 30px; 
+    margin: 5px auto;
 }
-.navbar-header {
-	padding: 10px 15px 0;
-	text-align: left;
+.btn-primary {
+    color: #fff;
+    background-color: #50E3C2;
+    border: 1px solid #48ccae;
 }
-.navbar-right {
-	background-color: rgba(255, 255, 255, 0.7);
-	margin: 10px 0;
+.btn-primary:hover {
+    background-color: #61e5c8;
+    border: 1px solid #50E3C2;
 }
-a.brand {
-	font-size: 40px;
-	font-family: fancyfont;
-	color: #50E3C2;
+.btn-wide {
+    width: 100%;
 }
-.navbar .navbar-right a.primary, .navbar .primary {
-	color: #50E3C2;
+.btn-circle {
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    padding: 0;
+    border: 1px solid #999;
 }
-.navbar a.login {
-	background-color: #50E3C2;
-	color: #fff;
-}
-.navbar a.login:hover {
-	color: #333;
-}
-.navbar-toggle {
-    font-size: 18px;
-    margin: 0;
-    padding: 12px 5px 0;
-}
-/* END Header Styles */
-
-/* BEGIN Login Styles */
-#r-login {
-    width: 330px;
-    position: absolute;
-	top: 70px;
-    right: 16px;
-	background-color: rgba(255, 255, 255, 0.7);
-    margin-top: -5px;
-    padding: 5px 20px 10px;
-    color: #333;
-}
-#r-login .login-btn, .abcRioButtonLightBlue {
-    font-size: 20px;
-    color: #fff !important;
-    background-color: #999 !important;
-    height: 40px !important;
-    width: 100% !important;
-    margin: 10px 0;
-    -webkit-border-radius: 1px;
-    border-radius: 1px;
-    border-color: #888;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.25);
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transition: background-color .218s,border-color .218s,box-shadow .218s;
-    transition: background-color .218s,border-color .218s,box-shadow .218s;
-    -webkit-user-select: none;
-    -webkit-appearance: none;
-    cursor: pointer;
-    outline: none;
-}
-.abcRioButtonIcon {
-    display: none;
-}
-.abcRioButtonContents {
-    line-height: 38px !important;
-	font-size: 14px !important;
-}
-/* END Login Styles */
+/* END Form Styles */
 
 
