--- a/assets/css/artist-internal.css
+++ b/assets/css/artist-internal.css
@@ -411,6 +411,7 @@
   .artist-account-navbar-wrapper li {
     padding: 15px 0 15px 15px;
     text-align: left;
+    color: black;
   }
     .artist-account-navbar-wrapper li:hover {
       background-color: rgba(255, 255, 255, 0.6);
