--- a/assets/css/artist-internal.css
+++ b/assets/css/artist-internal.css
@@ -194,7 +194,6 @@
     font-family: 'roboto';
     padding: 40px 0 0 0;
     background-color: white;
-    /*height: 100vh;*/
     border-bottom: 1px solid lightgrey;
 
   }
@@ -290,16 +289,12 @@
   }
 }
 @media (min-width: 768px) and (max-width: 992px) {
-/*  .bar-svg svg {
-      width: 80px;
-  }*/
 }
 /*-- Plays Graph--*/
 .artist-internal-analytics-plays-wrapper {
   background-color: white;
   padding-top: 40px;
   border-bottom: 1px solid lightgrey;
-  /*margin-bottom: 20px;*/
   text-align: left;
 }
   .artist-internal-analytics-plays-wrapper h4 {
@@ -308,7 +303,6 @@
 .line-chart-wrapper {
   margin-top: 40px;
   margin-bottom: 10px;
-  /*margin-left: 15px;*/
   height: 100%;
 }
   #line-chart-svg {
@@ -401,7 +395,6 @@
 
 /*-- Artist Account Setting --*/
 .artist-account-wrapper {
-  /*width: 100%;*/
 }
 
 .artist-account-navbar-wrapper  {
@@ -419,26 +412,185 @@
     }
 .artist-account-form-content-wrapper {
   background-color: white;
-  height: 1000px;
+  padding: 20px 25px;
+  border-bottom: 1px solid lightgrey;
 }
 
 .artist-account-setting-header {
   text-align: left;
 }
-.artist-account-setting-upload-wrapper{
-  border: 1px solid black;
-  height: 300px;
+.artist-account-setting-upload-wrapper {
+  padding: 40px 20px;
 }
   .artist-account-setting-profile-img {
     height: 175px;
     width: 175px;
     border-radius: 50%;
-    background-color: red;
+    background-color: #FAFAFA;
   }
+    .artist-account-setting-profile-img p {
+      margin-top: -5px;
+      font-size: 10px; 
+    }
   .artist-account-setting-profile-banner-img {
     height: 175px;
-    background-color: yellow;
+    background-color: #FAFAFA;
   }
   .account-setting-bio-box {
-    height: 150px;
+    height: 120px;
+    padding: 20px;
+    border: 1px solid transparent;
+    border-top: none;
+    border-bottom: 1px solid #DDD;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
   }
+
+    .shape-details {
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  .artist-account-form-input {
+    text-align: left;
+    margin: 20px 0;
+  }  
+    .artist-account-form-input input {
+      height: 45px;
+      border: 1px solid transparent;
+      border-top: none;
+      border-bottom: 1px solid #DDD;
+      box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+    }
+    .artist-account-form-bio {
+      text-align: left;
+      margin-bottom: 5px;
+    }
+      .artist-account-form-bio h5 {
+        margin-bottom: 5px;
+      }
+    .artist-account-form-input h5 {
+      margin: 15px 0 5px;
+    }
+    .strike {
+      text-decoration: line-through;
+      color: red;
+    }
+  .save-btn {
+    background-color: rgb(80, 227, 194);
+    font-family: "roboto-light";
+    color: white;
+    border: none;
+    padding: 10px;
+    margin-top: 30px;
+    box-shadow: 2px 2px 2px grey;
+  }
+    .save-btn span {
+      vertical-align: bottom;
+    }
+/*-- Artist Contact Info --*/
+.artist-setting-contact-info-wrapper, .artist-account-contact-info-wrapper, .artist-notification-wrapper, .artist-password-wrapper {
+  background-color: white;
+  padding: 40px 20px 20px 20px;
+  border-bottom: 1px solid lightgrey;
+}
+  .artist-contact-h4 {
+    padding-top: 10px;
+  }
+  .artist-contact-setting-header, .artist-account-contact-header {
+    text-align: left;
+    margin-bottom: 50px;
+  }
+  .artist-contact-form-input input {
+    max-width: 350px;
+    height: 45px;
+    border: 1px solid transparent;
+    border-top: none;
+    border-bottom: 1px solid #DDD;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+    margin-bottom: 20px;
+  }
+  .artist-contact-form-input select {
+    max-width: 350px;
+    height: 45px;
+    border: 1px solid lightgrey;
+    background-color: white;
+    
+  }
+    .artist-contact-form-input option {
+    }
+/*-- Artist Connected Accounts --  */
+.artist-connected-links {
+  text-align: left;
+}
+  .artist-connected-links li {
+    font-family: "roboto-light";
+    height: 60px;
+    margin-bottom: 20px;
+    color: black;
+    background-color: lightgrey;
+
+  }
+    #facebook {
+      background-color: #3B5998;
+      color: white;
+    }
+    .artist-connected-links h3, .artist-connected-links span {
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+      .artist-connected-links span {
+        padding-right: 45px;
+      }
+      .artist-connected-links input {
+        height: 60px;
+      }
+/*-- Artist Notification --*/
+.artist-notification-activities {
+  padding: 30px;
+  text-align: left;
+}
+  .artist-notification-header, .artist-password-header {
+    text-align: left;
+  }
+  .artist-notification-activities-items li {
+    padding: 10px 0;
+  }
+  .artist-notification-updates {
+    margin: 20px 0 10px 0;
+  }
+  .artist-notification-activities input {
+    margin-left: 80px;
+    margin-right: 2px;
+  }
+  .notification-icon {
+    margin-left: 60px;
+    margin-right: 2px;
+  }
+  .check-uncheck {
+    margin-bottom: 10px;
+    text-align: right;
+  }
+/*-- Artist Password --*/
+.artist-password-header {
+  margin-bottom: 40px;
+}
+.artist-password-content input {
+  max-width: 350px;
+  height: 45px;
+  border: 1px solid transparent;
+  border-top: none;
+  border-bottom: 1px solid #DDD;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+  margin-bottom: 20px;
+}
+.artist-password-btn {
+  max-width: 350px;
+  height: 45px;
+  background-color: rgb(80, 227, 194);
+  font-family: "roboto-light";
+  color: white;
+  border: none;
+  padding: 10px;
+  box-shadow: 2px 2px 2px grey;
+}
