--- a/assets/css/artist-internal.css
+++ b/assets/css/artist-internal.css
@@ -419,6 +419,9 @@
 .artist-account-setting-header {
   text-align: left;
 }
+.things {
+  text-align: center;
+}
 .artist-account-setting-upload-wrapper {
   padding: 40px 20px;
 }
@@ -509,13 +512,27 @@
     .save-btn span {
       vertical-align: bottom;
     }
+.settings-mobile-nav {
+  display: none;
+}    
 /*account mobile */
 @media (max-width: 768px) {
-  .artist-account-form-content-wrapper {
+  .settings-mobile-nav {
+    display: block;
   }
-    .artist-account-setting-header {
-      text-align: center;
+    .settings-mobile-nav h3 {
+      padding: var(--space-md) 0;
     }
+    .settings-mobile-nav ul {
+      position: absolute;
+      z-index: 999;
+    }
+  .settings-navbar {
+    display: none;
+  }
+  .artist-account-navbar-wrapper {
+    margin:0;
+  }
   .artist-account-setting-upload-wrapper {
     padding: 15px 0 5px;
   }
@@ -530,6 +547,11 @@
       text-align: left;
     }  
 }
+@media (min-width: 767px) and (max-width: 990px ) {
+  .artist-account-setting-upload-wrapper {
+    padding: 15px;
+  }
+}
 
 /*-- Artist Contact Info --*/
 .artist-setting-contact-info-wrapper, .artist-account-contact-info-wrapper, .artist-notification-wrapper, .artist-password-wrapper {
@@ -539,6 +561,8 @@
 }
   .artist-contact-h4 {
     padding-top: 10px;
+    text-align: left;
+    padding-bottom: var(--space-sm); 
   }
   .artist-contact-setting-header, .artist-account-contact-header {
     text-align: left;
@@ -560,8 +584,7 @@
     background-color: white;
     
   }
-    .artist-contact-form-input option {
-    }
+
 /*-- Artist Connected Accounts --  */
 .artist-connected-links {
   text-align: left;
@@ -572,7 +595,7 @@
     margin-bottom: 20px;
     color: black;
     background-color: lightgrey;
-
+    max-width: 275px;
   }
     #facebook {
       background-color: #3B5998;
@@ -589,6 +612,13 @@
       .artist-connected-links input {
         height: 60px;
       }
+/* mobile */
+@media (max-width: 768px) {
+  .artist-account-contact-header, .artist-contact-setting-header, .artist-account-setting-header {
+    text-align: center;
+  }
+
+}      
 /*-- Artist Notification --*/
 .artist-notification-activities {
   padding: 30px;
@@ -615,6 +645,18 @@
     margin-bottom: 10px;
     text-align: right;
   }
+@media (max-width: 768px) {
+  .notification-icon {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .artist-notification-activities input {
+    margin-left: var(--space-sm);
+  }
+  .artist-notification-header {
+    text-align: center;
+  }
+}  
 /*-- Artist Password --*/
 .artist-password-wrapper {
    padding-bottom: 100px;
