--- a/assets/css/artist-internal.css
+++ b/assets/css/artist-internal.css
@@ -100,8 +100,10 @@
 }
 /*-- Artist Upload --*/
 .artist-internal-greeting {
-  margin: 25px 0;
-  position: relative;
+  margin-left: 50px;
+}
+.upload-links {
+  margin-left: 10px;
 }
 @media (max-width: 767px) {
   .artist-upload-wrapper {
@@ -110,27 +112,20 @@
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .artist-internal-greeting {
-    margin margin-left: 25px;
+    margin-left: 25px;
   }
 }
 .artist-upload-wrapper {
-  border: 1px solid lightgrey;
-  padding: 20px;
-  margin-left: 20px;
-  background-color: white;
-  filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.3));
-  -webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.3));
+  padding: var(--space-lg) ;
   font-family: 'roboto-light';
 }
-  .artist-upload-wrapper h3 {
-    color: #50E3C2;
-  }
-  .artist-upload-wrapper a {
-    color: #50E3C2;
+  .artist-internal-greeting h3 {
+    font-family: 'roboto-light';
+    padding: var(--space-lg) 0 15px;
   }
 .artist-upload-drop {
   padding: 30px;
-  margin-top: 20px;
+  margin: 20px 15px;
   border: 1px dashed lightgrey;
   text-align: center;
 }
@@ -147,9 +142,24 @@
   height: 50px;
   box-shadow: inset 0 1px 2px rgba(0,0,0,.3), 0 -1px 1px #FFF, 0 1px 0 #FFF;
 }
+.artist-upload-textarea {
+  height: 120px;
+  padding: var(--space-sm);
+  margin-bottom: var(--space-sm);
+  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.3), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,.3), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+}
+.album-art-box {
+  height: 300px;
+  background-color: var(--grey-6);
+  margin-top: var(--space-lg);
+    text-align: center;
+}
+
 .artist-upload-btn {
   height: 50px;
-  margin: 30px 0;
+  margin: 20px 0;
+  padding: var(--space-sm) var(--space-lg);
   border-radius: 0;
   color: white;
   background-color: #50E3C2;
@@ -160,6 +170,12 @@
     background-color: rgba(80, 227, 194, 0.1);
     color: white;
   } 
+.upload-active-underline {
+  border-bottom: 2px solid var(--primary);
+  padding-top: 30px;
+  width: 100px;
+  content: '';
+}
 
 /*-- Artist Internal Library --*/
 .artist-internal-library-wrapper {
