--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: fancyfont;
+    src: url(../fonts/SignPainter-HouseScript.ttf);
+}
 @font-reg: 'roboto-light';
 @font-md: 'roboto-medium';
 @font-bold: 'roboto-bold';
